[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui-theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/sprites/SFONDO.png" type="Texture" id=2]
[ext_resource path="res://assets/switch-click-and-beep-001a-11602.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/fonts/open-sans/open-sans-bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=5]
size = 80
outline_size = 2
outline_color = Color( 0.298039, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/fonts/open-sans/open-sans-bold.ttf"

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = SubResource( 10 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.529412, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.298039, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -80.0 ],
"_edit_lock_": true
}

[node name="Sfondo" type="Sprite" parent="."]
modulate = Color( 1, 0.380392, 0.380392, 1 )
position = Vector2( 511.5, 301.5 )
scale = Vector2( 0.49, 0.282381 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.0901961, 0.0901961, 0.858824 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 261.0

[node name="Title" type="Label" parent="CenterContainer"]
margin_left = 205.0
margin_top = 75.0
margin_right = 818.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0.529412, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 5 )
text = "ALIEN ODYSSEY"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -34.0
margin_right = 100.0
margin_bottom = 130.0
custom_constants/separation = 16

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 70 )
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
custom_colors/font_color_disabled = Color( 0.176471, 0.0705882, 0.0705882, 1 )
custom_colors/font_color_focus = Color( 0.176471, 0.0705882, 0.0705882, 1 )
custom_colors/font_color = Color( 0.176471, 0.0705882, 0.0705882, 1 )
custom_colors/font_color_hover = Color( 0.176471, 0.0705882, 0.0705882, 1 )
custom_colors/font_color_pressed = Color( 0.176471, 0.0705882, 0.0705882, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 200.0
margin_bottom = 156.0
rect_min_size = Vector2( 200, 70 )
focus_neighbour_top = NodePath("../PlayButton")
focus_previous = NodePath("../PlayButton")
custom_colors/font_color_disabled = Color( 0.176471, 0.0705882, 0.0705882, 1 )
custom_colors/font_color_focus = Color( 0.176471, 0.0705882, 0.0705882, 1 )
custom_colors/font_color = Color( 0.176471, 0.0705882, 0.0705882, 1 )
custom_colors/font_color_hover = Color( 0.176471, 0.0705882, 0.0705882, 1 )
custom_colors/font_color_pressed = Color( 0.176471, 0.0705882, 0.0705882, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -147.0
margin_top = -90.0
margin_right = -16.0
margin_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0

[node name="MadeByLabel" type="Label" parent="Credits"]
visible = false
margin_right = 131.0
margin_bottom = 34.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "made by:"

[node name="Developer1" type="Label" parent="Credits"]
visible = false
margin_top = 38.0
margin_right = 137.0
margin_bottom = 72.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.92549, 0.92549, 0.92549, 1 )
text = "Andrea1141"

[node name="Developer2" type="Label" parent="Credits"]
visible = false
margin_top = 76.0
margin_right = 137.0
margin_bottom = 110.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.886275, 0.87451, 0.87451, 1 )

[node name="Developer3" type="Label" parent="Credits"]
visible = false
margin_top = 129.0
margin_right = 157.0
margin_bottom = 168.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.886275, 0.87451, 0.87451, 1 )
text = "Developer 3"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
